--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "deploy:vercel": "vercel"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
     "formik": "^2.0.0",
     "framer-motion": "^9.0.0",
     "next": "^14.1.1",
