--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.1.1",
     "next-plausible": "^3.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tanstack/react-query": "^4.0.0",
