--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:vercel": "vercel"
   },
   "dependencies": {
+    "apexcharts": "^3.46.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "formik": "^2.0.0",
@@ -21,6 +22,7 @@
     "next": "^14.1.1",
     "next-plausible": "^3.0.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1"
