--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy:vercel": "vercel"
   },
   "dependencies": {
+    "@types/react-paginate": "^7.1.4",
     "apexcharts": "^3.46.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
@@ -25,6 +26,7 @@
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
